[gd_scene load_steps=11 format=3 uid="uid://bwfo7tvl4ewc1"]

[ext_resource type="Script" path="res://src/entities/soccer_player.gd" id="1_bbd2v"]
[ext_resource type="Texture2D" uid="uid://v8bbamgxkvxf" path="res://assets/sprites/soccer_sheet.png" id="2_0inxe"]
[ext_resource type="Texture2D" uid="uid://dyop3i132f2bf" path="res://assets/sprites/water_sprite.png" id="3_l6d5m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5if3"]
size = Vector2(59, 120)

[sub_resource type="CircleShape2D" id="CircleShape2D_ljgii"]
radius = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_77a6a"]

[sub_resource type="Animation" id="Animation_5nwi8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fvdat"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.57254]
}

[sub_resource type="Animation" id="Animation_b3r63"]
resource_name = "running"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycbe8"]
_data = {
"RESET": SubResource("Animation_5nwi8"),
"dead": SubResource("Animation_fvdat"),
"running": SubResource("Animation_b3r63")
}

[node name="SoccerPlayer" type="RigidBody2D" groups=["soccer"]]
collision_mask = 3
gravity_scale = 1.66533e-16
can_sleep = false
max_contacts_reported = 2
contact_monitor = true
angular_damp = 100.0
script = ExtResource("1_bbd2v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_v5if3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0inxe")
hframes = 2

[node name="water" type="Sprite2D" parent="."]
visible = false
position = Vector2(53, -79)
texture = ExtResource("3_l6d5m")

[node name="DrinkArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrinkArea"]
shape = SubResource("CircleShape2D_ljgii")

[node name="ProgressBar" type="ProgressBar" parent="."]
material = SubResource("ShaderMaterial_77a6a")
offset_left = 33.0
offset_top = -58.0
offset_right = 37.0
offset_bottom = 57.0
value = 30.0
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="DangerTime" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ycbe8")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_entered" from="DrinkArea" to="." method="_on_drink_area_body_entered"]
[connection signal="body_exited" from="DrinkArea" to="." method="_on_drink_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DangerTime" to="." method="_on_danger_time_timeout"]
